# kan-symbolic-wind-solar-load-forecasting

./: .gitignore  LICENSE  PAPER_PLAN.md  README.md  build-midterm-report-presentation.js  build-midterm-report.js  ep_temp.json  kaitibaogao.pptx  met_temp.csv  midterm-report-outline.md  midterm-report-presentation-outline.md  midterm-report-presentation.pptx  pr_temp.json  proposal_defense_ppt169_20260315_20260315_084355.pptx  pyproject.toml  requirements.txt  开题报告 - 副本.docx  开题报告.docx  开题报告_modified.docx  开题答辩_风光耦合负荷预测_20260315_083057.pptx  符号回归风光负荷预测研究.md  风光耦合负荷预测开题答辩_20260315_034457.pptx  风光耦合负荷预测开题答辩_20260315_034531.pptx
.planning/: MODAL.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.serena/: project.yml
doc/: MinerU_markdown_2、计算机学院2026届本科毕业论文模板-辅修专业_2032692465713860608.md  PROJECT_ARCHITECTURE_STATUS_FOR_AI.md  PROJECT_ARCHITECTURE_STATUS_FOR_AI_v2.md  PROJECT_ARCHITECTURE_STATUS_FOR_AI_v3.md  a2gp.md  advice-1.md  advice-2.md  experiment_demand_data_summary_20260502.md  fill_thesis.py  focused_component_teacher_strategy.drawio  kan_tuning_notes.md  next.md  paper_delivery_closure_20260306.md  physics_integration_report.md  presentation-svg.pptx  proposal_research_framework_zh.drawio  thesis_content.json  todo.md  世界变局中的新型大国关系构建.docx  中期报告_filled.docx  中期报告模板.docx  周闯开题报告(修改).docx  开题报告草稿.md  文献仓库.md  符号回归风光负荷预测研究.md  论文_pandoc.docx  论文模板.docx
modal_jobs/: baseline_torch.py  combine_net_load_runs.py  data_pipeline.py  derive_dataset.py  kan_symbolic.py  kan_train.py  pysr_baseline.py  smoke_test.py  summarize_case4_matched.py
model/: 0.0_state  (+5 more)
(+705 files in other folders)
