[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kan-sr"
version = "0.1.0"
description = "Symbolic Regression via Kolmogorov-Arnold Networks for Renewable Energy Forecasting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "vfch" },
]
keywords = ["symbolic-regression", "KAN", "renewable-energy", "interpretable-ml", "load-forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "h5py>=3.10",
    "s3fs>=2024.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pvlib>=0.10.0",
    "pyarrow>=14.0",
    "tqdm>=4.66",
    "torch>=2.1",
    "pykan==0.2.8",
    "pyyaml>=6.0",
    "sympy>=1.13.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
modal = ["modal>=0.60"]
dev = ["pytest>=7.0", "ruff>=0.3.0"]

[project.urls]
Repository = "https://github.com/hfvcn/graduation-design"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
